margin alignment of gallery thumbnails in category page fixed

--- a/template/templates/conceptConstruction/css/contents.css
+++ b/template/templates/conceptConstruction/css/contents.css
@@ -9,6 +9,10 @@
 	margin-bottom: 15px;
 }
 
+#content.wide2 .galleryCenter {
+	margin: 0 0 15px 24px;
+}
+
 .galleryCenter p {
 	float: left;
 	font-family: arial;
@@ -32,7 +36,7 @@
 	display: inline-block;
 	*display: inline;
 	*zoom: 1;
-	margin: 0 0 15px 52px;
+	margin: 0 0 15px 24px;
 }
 
 .galleryLeft p {
